index.html changement de tpe petrole à l'autre

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				      <div class="caption">
 				        <h3>Les défis technologiques</h3>
 				        <p>Le pétrole présente beaucoup de défis technologiques pour le futur...</p>
-				        <p><a href="../TPE pétrole/indexTPE2.html" class="btn btn-primary" role="button">Voir plus</a></p>
+				        <p><a href="../TPE-pe-trole/indexTPE2.html" class="btn btn-primary" role="button">Voir plus</a></p>
 				      </div>
 				    </div>
 				  </div>
@@ -142,7 +142,7 @@
 				      <div class="caption">
 				        <h3>Les défis environnementaux</h3>
 				        <p>Le pétrole est une des principales sources de pollution, c'est pourquoi...</p>
-				        <p><a href="../TPE pétrole/indexTPE3.html" class="btn btn-primary" role="button">Voir plus</a></p>
+				        <p><a href="../TPE-pe-trole/indexTPE3.html" class="btn btn-primary" role="button">Voir plus</a></p>
 				      </div>
 				    </div>
 				  </div>
