--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 			<div class="jumbotron">
-				  <h1>Petite présentation</h1>
+				  <h1>En préambule</h1>
 				  <i class="fas fa-exclamation-triangle"></i>
 				  <p>Nous tenons à vous préciser que ce site web a été entièrement réaliser par le groupe</p>				  
 		    </div>
